# Discos-An-lisis-Final

./: .flake8  .gitattributes  .gitignore  AGENTS.md  ControlvControl.txt  Cómo usarlo.txt  Informe cronológico H_I_J (1995-2025).htm  Informe cronológico H_I_J (1995-2025).html  Listado_Duplicados_interactivo.html  Listado_Duplicados_interactivo2.html  Listado_H.txt  Listado_H_iconos (2).ps1  Listado_H_iconos - Acceso directo.lnk  Listado_H_iconos.ps1  Listado_H_iconos.txt  Listado_H_iconos_ASCII.txt  Listado_H_interactivo.ps1  README.md  Skip to main content.txt  Untitled-2.html  deleted_nonmedia_duplicates.csv  deleted_nonmedia_duplicates_missing.csv  detect_drive_changes.ps1  dupes_confirmed.csv  environment.yml  gitattributes  gitignore  hybrid_dedup.ps1  identify-duplicates.ps1  index_by_hash.html  informe_cronologico.html  informe_inventario_bueno (2).ps1  informe_para_familia.html  inventario_interactivo_offline.html  inventory-state.js  inventory.config.sample.json  inventory_by_folder.csv  inventory_folder_index.txt  listado_archivos.csv  listarH.ps1  (+15 more)
Informe cronológico H_I_J (1995-2025)_files/: Listado_I_interactivo.html
_snapshots/: by_drive.csv  by_ext.csv  by_state.csv  inventario_bueno.html  inventario_plegable.html  inventory_folder_index.txt  prededup_size_name.csv  top_folders_H.csv  top_folders_I.csv  top_folders_J.csv
data/: inventory.json  inventory.min.json  python crear_gzip.py
docs/: Listado_Duplicados_interactivo.html  Listado_I_interactivo.html  dupes_confirmed.csv  duplicate_summary.json  index.html  inventario_interactivo_offline.html  (+1 more)
(+112 files in other folders)
